change: new LikedList() -> Lists.newArrayList(...) change: new LinkedHasMap() -> Maps.newHasMap(...) change: new ArrayList() -> Lists.newArrayList(...) change: new HasMap() -> Maps.newHasMap(...)